<resources>
    <string name="app_name">IndonesiaKu</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="qr_scan">QR Scan</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_profile">Profile</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="action_to_sign_up">Don\'t Have an account?   Click here</string>
    <string name="error_edit_email">Email is not Valid</string>
    <string name="error_edit_password">Password is not valid</string>
    <string name="action_to_login">Already have an account? Click here</string>
    <string name="title_verifikasi">Verifikasi PIN</string>
    <string name="txt_input_pin">Masukan Pin Anda</string>
    <string name="text_btn_masuk">Masuk</string>
    <string name="forget_pin">Lupa PIN ?</string>
    <string name="txt_empty" />
    <string name="hint_pin">******</string>
    <string name="masukan_kode_verifikasi">Masukan Kode Verifikasi</string>
    <string name="note_verif">Masukkan kode yang telah dikirim melalui email anda di z****m@gmail.com</string>
    <string name="txt_kirim">Kirim</string>
    <string name="txt_nik">Masukan Nomer Identitas KTP Anda</string>
    <string name="txt_ps_nik">Masukkan No. KTP sesuai dengan KTP yang didaftarkan pada akun anda</string>
    <string name="txt_new_pin">Masukan PIN Baru</string>
    <string name="txt_confirm_new_pin">Konfirmasi PIN Baru</string>
    <string name="txt_not_same_pin">PIN Tidak Sama</string>
    <string name="edit_account_information">Edit Account Information</string>
    <string name="header_account">Account</string>
    <string name="action_about">About</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="tv_display_name">Display Name</string>
    <string name="tv_user">User</string>
    <string name="sign_up_to_indonesiaku">Sign Up to IndonesiaKu</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_change_password">Change Password</string>
    <string name="prompt_display_name">Display Name</string>
    <string name="action_save_changes">Save Changes</string>
    <string name="title_edit_profile">"Edit your profile here"</string>
    <string name="title_change_password">Change your password</string>
    <string name="text_welcome">Welcome, %s!</string>
    <string name="tv_identity">Your Identities</string>
    <string name="action_authorize">Authorize</string>
    <string name="profile">Profile</string>
</resources>