<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/spacing_huge"
    tools:context=".onboard.ui.pin.PinActivity">
    <TextView
        android:id="@+id/title_verifikasi"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_verifikasi"
        android:textStyle="bold"
        android:layout_marginTop="120dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/txt_input_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_input_pin"
        android:textSize="@dimen/font_normal"
        android:layout_marginTop="@dimen/spacing_normal"
        app:layout_constraintTop_toBottomOf="@id/title_verifikasi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/edt_pin"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:textAlignment="center"
        android:hint="@string/hint_pin"
        app:layout_constraintTop_toBottomOf="@id/txt_input_pin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/txt_wrong_pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_empty"
        android:layout_marginTop="@dimen/spacing_small"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintTop_toBottomOf="@id/edt_pin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/btn_forget_pin"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_pin"
        android:textColor="@color/teal_700"
        android:layout_marginTop="@dimen/spacing_normal"
        app:layout_constraintTop_toBottomOf="@id/txt_wrong_pin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_btn_masuk"
        android:layout_marginBottom="@dimen/spacing_wide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>