<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bangkit.idku.app.home.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.bangkit.idku.app.home.fragments.scan.ScanQRFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_scan_qr" />

    <fragment
        android:name="com.bangkit.idku.app.home.fragments.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <activity
        android:id="@+id/pinActivity"
        android:name="com.bangkit.idku.app.onboard.ui.pin.PinActivity"
        android:label="activity_pin"
        tools:layout="@layout/activity_pin" >
        <action
            android:id="@+id/action_pinActivity_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_pinActivity_to_forgetPinActivity"
            app:destination="@id/forgetPinActivity" />
    </activity>
    <activity
        android:id="@+id/forgetPinActivity"
        android:name="com.bangkit.idku.app.onboard.ui.pin.forgetpin.ForgetPinActivity"
        android:label="activity_forget_pin"
        tools:layout="@layout/activity_forget_pin" >
        <action
            android:id="@+id/action_forgetPinActivity_to_entryOtpActivity"
            app:destination="@id/entryOtpActivity" />
    </activity>
    <activity
        android:id="@+id/entryOtpActivity"
        android:name="com.bangkit.idku.app.onboard.ui.pin.entryotp.EntryOtpActivity"
        android:label="activity_entry_otp"
        tools:layout="@layout/activity_entry_otp" >
        <action
            android:id="@+id/action_entryOtpActivity_to_newPinActivity"
            app:destination="@id/newPinActivity" />
    </activity>
    <activity
        android:id="@+id/newPinActivity"
        android:name="com.bangkit.idku.app.onboard.ui.pin.newpin.NewPinActivity"
        android:label="activity_new_pin"
        tools:layout="@layout/activity_new_pin" >
        <action
            android:id="@+id/action_newPinActivity_to_pinActivity"
            app:destination="@id/pinActivity" />
    </activity>
=======
        tools:layout="@layout/fragment_profile" />
>>>>>>> Stashed changes
</navigation>