<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/spacing_huge"
    tools:context=".onboard.ui.pin.newpin.NewPinActivity">
    <TextView
        android:id="@+id/title_new_pin"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/txt_new_pin"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/edt_new_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="6"
        android:inputType="numberPassword"
        android:layout_marginTop="@dimen/spacing_normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_new_pin"/>
    <TextView
        android:id="@+id/title_confirm_pin"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_confirm_new_pin"
        android:layout_marginTop="@dimen/spacing_wide"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@id/edt_new_pin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/edt_confirm_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="6"
        android:inputType="numberPassword"
        android:layout_marginTop="@dimen/spacing_normal"
        app:layout_constraintTop_toBottomOf="@id/title_confirm_pin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/btn_send_new_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_kirim"
        android:layout_marginBottom="@dimen/spacing_wide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>